test/pass/closures/close_optarg_param.lly
define f(a: *integer=10) : function( => integer) {
    define g : integer { return a }
    return g
}

if f()() != 10:
    stderr.print("Failed.")

if f(11)() != 11:
    stderr.print("Failed.")
