test/fail/lambdas/lambda_argument_default.lly
#[
SyntaxError: Cannot infer type of 'a'.
    from lambda_argument_default.lly:10
]#

define f[A](g: function(A => A)) {

}

f({|a| a})
